--- a/SURVEY_FORM_Task 1/index.html
+++ b/SURVEY_FORM_Task 1/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Multi-Page Survey</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Bootstrap Survey Form</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-  <div class="survey-container">
+  <div class="container my-5">
     <form id="survey-form">
       <div class="page" id="page1">
-        <h1>Page 1</h1>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name">
-        <button type="button" onclick="nextPage(2)">Next</button>
+        <h1>Welcome to Our Survey</h1>
+        <div class="mb-3">
+          <label for="name" class="form-label">Name:</label>
+          <input type="text" id="name" name="name" class="form-control">
+        </div>
+        <button type="button" class="btn btn-primary" onclick="nextPage(2)">Next</button>
       </div>
       <div class="page" id="page2">
-        <h1>Page 2</h1>
-        <label for="age">Age:</label>
-        <input type="text" id="age" name="age">
-        <button type="button" onclick="prevPage(1)">Previous</button>
-        <button type="button" onclick="nextPage(3)">Next</button>
+        <h1>Just a Little More</h1>
+        <div class="mb-3">
+          <label for="age" class="form-label">Age:</label>
+          <input type="text" id="age" name="age" class="form-control">
+        </div>
+        <button type="button" class="btn btn-secondary" onclick="prevPage(1)">Previous</button>
+        <button type="button" class="btn btn-primary" onclick="nextPage(3)">Next</button>
       </div>
       <div class="page" id="page3">
-        <h1>Page 3</h1>
-        <label for="feedback">Feedback:</label>
-        <textarea id="feedback" name="feedback"></textarea>
-        <button type="button" onclick="prevPage(2)">Previous</button>
-        <button type="submit">Submit</button>
+        <h1>Share Your Thoughts</h1>
+        <div class="mb-3">
+          <label for="feedback" class="form-label">Feedback:</label>
+          <textarea id="feedback" name="feedback" class="form-control"></textarea>
+        </div>
+        <button type="button" class="btn btn-secondary" onclick="prevPage(2)">Previous</button>
+        <button type="submit" class="btn btn-success">Submit</button>
       </div>
     </form>
   </div>
