--- a/SURVEY_FORM_Task 1/index.html
+++ b/SURVEY_FORM_Task 1/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Survey Form</title>
+  <title>Multi-Page Survey Form</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div class="container my-5">
