--- a/SURVEY_FORM_Task 1/index.html
+++ b/SURVEY_FORM_Task 1/index.html
@@ -137,5 +137,31 @@
   </div>
     
 </form>
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCnd2OmOop-KehtlF-touDS9cDXD9fB5Dk",
+    authDomain: "survery-form-codealpha.firebaseapp.com",
+    projectId: "survery-form-codealpha",
+    storageBucket: "survery-form-codealpha.appspot.com",
+    messagingSenderId: "141399547130",
+    appId: "1:141399547130:web:285b262e5fdfbdd484bd43",
+    measurementId: "G-NTKC92KSW2"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+
+
 </body>
 </html>
